--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@braks/vue-flow": "^0.4.41",
     "vue": "^3.4.36",
-    "vue-flow": "^0.2.0",
-    "@braks/vue-flow": "^0.4.41"
+    "vue-flow": "^0.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.0.0",
+    "@vue/compiler-sfc": "^3.4.37",
     "typescript": "^4.0.0",
-    "vite": "^2.0.0"
+    "vite": "^2.0.0",
+    "vue-loader": "^17.3.1"
   }
 }
